syntax = "proto3";

option csharp_namespace = "Northwind.Grpc.Client.Mvc";

package shipper;

service Shipper {
  rpc GetShipper (ShipperRequest) returns (ShipperReply);
}

message ShipperRequest {
  int32 shipper_id = 1;
}

message ShipperReply {
  int32 shipper_id = 1;
  string company_name = 2;
  string phone = 3;
}
